REGRESSION (r245913) [ Debug ] ASSERTION FAILED: m_swConnectionsByIdentifier.contains(connection.serverConnectionIdentifier()) Layout Test http/wpt/service-workers/update-service-worker.https.html is a flaky crash https://bugs.webkit.org/show_bug.cgi?id=198434 <rdar://problem/51313917>

Reviewed by Alex Christensen.

Iterate through the connectionID-based connection map instead of the sessionID-based map to notify them their connection is lost.

* WebProcess/Network/NetworkProcessConnection.cpp:
(WebKit::NetworkProcessConnection::didClose):


Canonical link: https://commits.webkit.org/212529@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246068 268f45cc-cd09-0410-ab3c-d52691b4dbfc